--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
   <p id="result"></p>
 </div>
         
-        <script src="/scripts/main.js" async defer></script>
+        <script src="scripts/main.js" async defer></script>
     </body>
 </html>
 
