--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <nav class="navbar navbar-expand nav-custom">
             <div class="container-fluid">
-                <a class="navbar-brand custom-brand" href="#">Navbar</a>
+                <a class="navbar-brand custom-brand" href="#">FableForge</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
