added content to index2.html

--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
     <body>
         <div class="splash-container">
             <div class="centered">
-                <a class="enter-button" href="index.html">Enter</a>
+                <a class="enter-button" href="index2.html">Enter</a>
             </div>
         </div>
 
