--- a/index.html
+++ b/index.html
@@ -4,58 +4,77 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-    <body>
-        <nav class="navbar navbar-expand nav-custom">
-            <div class="container-fluid">
-                <a class="navbar-brand custom-brand" href="#">FableForge</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="#">Tropes</a>
-                        <a class="nav-link" href="#">Genres</a>
-                    </div>
-                </div>
+  <body>
+    <div class="overlay">
+      <main>
+        <nav class="navbar navbar-expand">
+          <div class="container-fluid custom-nav">
+            <a class="navbar-brand custom-brand" href="#">FableForge</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Tropes</a>
+                <a class="nav-link" href="#">Genres</a>
+              </div>
             </div>
+          </div>
         </nav>
-
-        <main>
-            <div class="container-fluid genre-container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1 id="main-title">Website Prototype</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <img class= "img-fluid rounded-3 img-custom" src="pencil.jpg"/>
-                    </div>
-                    <div class="col-sm-7">
-                        <p class="content">
-                            Welcome to Placeholder, your one-stop destination for all the writing tools and generators you'll ever need! We're committed to providing writers of all levels with a treasure trove of resources to spark your creativity, ignite your imagination, and make your writing journey more enjoyable. Dive into our wide array of tools and generators, and let the inspiration flow. Happy writing!
-                        </p>
-                    </div>
-                    <div class="col-sm-3">
-                        <iframe src = "generator.html" width = "100%" height ="850px" title="Generator">
-                        </iframe>
-                    </div>
-                </div>
+        <div class="container-fluid content-container">
+          <div class="row">
+            <div class="col-sm-12">
+              <h1 id="main-title">Forge Your Fantasy</h1>
             </div>
-        </main>
-
-    </body>
+          </div>
+          <div class="row no-pad">
+            <div class="col-sm-7 custom-col">
+              <p class="content float-left">
+                Welcome to FableForge, the ultimate creative hub for fantasy writers and RPG enthusiasts! Our mission is to provide you with an inspiring collection of tools, resources, and a supportive community to help you unleash your imagination and craft compelling stories, characters, and worlds. Whether you're a seasoned author or just starting your journey, FableForge is the perfect destination for bringing your ideas to life. Dive into our innovative generators, explore our extensive library of articles and tutorials, and join our vibrant community of like-minded creators. Together, we'll forge unforgettable tales and thrilling adventures!
+              </p>
+            </div>
+            <div class="col-sm-5 no-pad">
+              <iframe
+                src="generator-embed.html"
+                class="full-width-iframe"
+                width="50%"
+                height="500px"
+                title="Generator"
+              >
+              </iframe>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
+</html>
