changed file names

--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="overlay">
-      <header>
+      <main>
         <nav class="navbar navbar-expand">
           <div class="container-fluid custom-nav">
             <a class="navbar-brand custom-brand" href="#">FableForge</a>
@@ -57,41 +57,24 @@
             </div>
           </div>
           <div class="row no-pad">
-            <div class="col-sm-12 custom-col">
-              <p class="content">
+            <div class="col-sm-7 custom-col">
+              <p class="content float-left">
                 Welcome to FableForge, the ultimate creative hub for fantasy writers and RPG enthusiasts! Our mission is to provide you with an inspiring collection of tools, resources, and a supportive community to help you unleash your imagination and craft compelling stories, characters, and worlds. Whether you're a seasoned author or just starting your journey, FableForge is the perfect destination for bringing your ideas to life. Dive into our innovative generators, explore our extensive library of articles and tutorials, and join our vibrant community of like-minded creators. Together, we'll forge unforgettable tales and thrilling adventures!
               </p>
             </div>
+            <div class="col-sm-5 no-pad">
+              <iframe
+                src="generator-embed.html"
+                class="full-width-iframe"
+                width="50%"
+                height="500px"
+                title="Generator"
+              >
+              </iframe>
             </div>
           </div>
-        </div>]
-    </header>
-    </div>
-    <div class="section1">
-        <section class="generator-info">
-            <div class="featured-generators">
-                <h2 class="section-heading">Featured Generators</h2>
-                <div class="generator-wrapper">
-                  <div class="generator">
-                    <h3>Tropes Generator</h3>
-                    <p class="gen-tag">Discover unique and engaging story elements with our Tropes Generator. Add depth and intrigue to your tales by incorporating these exciting narrative devices.</p>
-                    <a class="enter-button cta" href="tropes-generator.html" class="btn">Try Tropes Generator</a>
-                  </div>
-                  <div class="generator">
-                    <h3>Genre Mash-Up Generator</h3>
-                    <p class="gen-tag">Unleash your creativity by blending genres with our Genre Mash-Up Generator. Create innovative and original stories that break the mold and captivate your audience.</p>
-                    <a class="enter-button cta" href="genre-mashup-generator.html" class="btn">Try Genre Mash-Up Generator</a>
-                  </div>
-                  <div class="generator">
-                    <h3>Creature Generator</h3>
-                    <p class="gen-tag">Populate your fantastical worlds with unique creatures using our Creature Generator. Design characters that capture your readers' imaginations.</p>
-                    <a class="enter-button cta" href="creature-generator.html" class="btn">Try Creature Generator</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-        
-        </section>
+        </div>
+      </main>
     </div>
   </body>
 </html>
