Add resources section to homepage

--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
         </div>]
     </header>
     </div>
-    <div class="section1">
+    <div class="section1 lighting-effect">
         <section class="generator-info">
             <div class="featured-generators">
                 <h2 class="section-heading">Featured Generators</h2>
@@ -78,9 +78,9 @@
                     <a class="enter-button cta" href="tropes-generator.html" class="btn">Try Tropes Generator</a>
                   </div>
                   <div class="generator">
-                    <h3>Genre Mash-Up Generator</h3>
-                    <p class="gen-tag">Unleash your creativity by blending genres with our Genre Mash-Up Generator. Create innovative and original stories that break the mold and captivate your audience.</p>
-                    <a class="enter-button cta" href="genre-mashup-generator.html" class="btn">Try Genre Mash-Up Generator</a>
+                    <h3 class="shine">Genre Mash-Up Generator</h3>
+                    <p class="gen-tag shine">Unleash your creativity by blending genres with our Genre Mash-Up Generator. Create innovative and original stories that break the mold and captivate your audience.</p>
+                    <a class="enter-button cta shine" href="genre-mashup-generator.html" class="btn">Try Genre Mash-Up Generator</a>
                   </div>
                   <div class="generator">
                     <h3>Creature Generator</h3>
@@ -94,7 +94,13 @@
     </div>
 
     <section class="resources">
-        <h2 class="section-heading-dark">Resources and Guides</h2>
+        <h2 class="section-heading">Resources and Guides</h2>
+        <p class="resources-blurb">Introducing the Resources and Guides section of FableForge, a curated collection of valuable tools, tips, and techniques designed to inspire and support the creative process of fantasy writers and RPG players. As we continue to expand our offerings, you'll find a growing repository of world-building guides, character development techniques, plot structuring methods, and more. Our goal is to provide a comprehensive library that helps you bring your stories and campaigns to life, whether you're a seasoned writer or a newcomer to the fantastic realms. So, dive in, explore the resources, and let the journey of imagination begin!</p>
+
+        <ul>
+          <li><a href="character-creation-guide.html" class="guidelink">FableForge's Guide To Character Creation</a></li>
+          <li><a href= "top-tips-for-worldbuilding.html class="guide-link">Top Tips For Worldbuilding</a></li>
+        </ul>
     </section>
   </body>
 </html>
