Add gradient bg to resources section

--- a/home.html
+++ b/home.html
@@ -68,9 +68,9 @@
     </header>
     </div>
     <div class="section1 lighting-effect">
+      <div class="section-overlay">
         <section class="generator-info">
             <div class="featured-generators">
-                <h2 class="section-heading">Featured Generators</h2>
                 <div class="generator-wrapper">
                   <div class="generator">
                     <h3>Tropes Generator</h3>
@@ -88,18 +88,20 @@
                     <a class="enter-button cta" href="creature-generator.html" class="btn">Try Creature Generator</a>
                   </div>
                 </div>
-              </div>
-            </div>
+              </div> 
         </section>
+      </div>
     </div>
+  
 
-    <section class="resources">
+    <section class="resources background-gradient">
         <h2 class="section-heading">Resources and Guides</h2>
         <p class="resources-blurb">Introducing the Resources and Guides section of FableForge, a curated collection of valuable tools, tips, and techniques designed to inspire and support the creative process of fantasy writers and RPG players. As we continue to expand our offerings, you'll find a growing repository of world-building guides, character development techniques, plot structuring methods, and more. Our goal is to provide a comprehensive library that helps you bring your stories and campaigns to life, whether you're a seasoned writer or a newcomer to the fantastic realms. So, dive in, explore the resources, and let the journey of imagination begin!</p>
 
         <ul>
-          <li><a href="character-creation-guide.html" class="guidelink">FableForge's Guide To Character Creation</a></li>
-          <li><a href= "top-tips-for-worldbuilding.html class="guide-link">Top Tips For Worldbuilding</a></li>
+          <li><a href="character-creation-guide.html" class="guide-link">FableForge's Guide To Character Creation</a></li>
+          <li><a href= "top-tips-for-worldbuilding.html" class="guide-link">Top Tips For Worldbuilding</a></li>
+          <li><a href="create-a-plot-outline.html" class="guide-link">Creating A Plot Outline</a></li>
         </ul>
     </section>
   </body>
