--- a/home.html
+++ b/home.html
@@ -4,105 +4,118 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-
-  <body>
-    <div class="overlay">
-      <header>
-        <nav class="navbar navbar-expand">
-          <div class="container-fluid custom-nav">
-            <a class="navbar-brand custom-brand" href="#">FableForge</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Tropes</a>
-                <a class="nav-link" href="#">Genres</a>
-              </div>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+            crossorigin="anonymous"
+        >
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="overlay">
+            <header>
+                <nav class="navbar navbar-expand">
+                    <div class="container-fluid custom-nav">
+                        <a class="navbar-brand custom-brand" href="#">FableForge</a>
+                        <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup"
+                            aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                        >
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link" href="#">Tropes</a>
+                                <a class="nav-link" href="#">Genres</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+                <div class="container-fluid content-container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h1 id="main-title">Forge Your Fantasy</h1>
+                        </div>
+                    </div>
+                    <div class="row no-pad">
+                        <div class="col-sm-12 custom-col">
+                            <p class="content">
+                                Welcome to FableForge, the ultimate creative hub for fantasy writers and RPG enthusiasts! Our mission is to provide you with an inspiring collection of tools, resources, and a supportive community to help you unleash your imagination and craft compelling stories, characters, and worlds. Whether you're a seasoned author or just starting your journey, FableForge is the perfect destination for bringing your ideas to life. Dive into our innovative generators, explore our extensive library of articles and tutorials, and join our vibrant community of like-minded creators. Together, we'll forge unforgettable tales and thrilling adventures!
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </nav>
-        <div class="container-fluid content-container">
-          <div class="row">
-            <div class="col-sm-12">
-              <h1 id="main-title">Forge Your Fantasy</h1>
-            </div>
-          </div>
-          <div class="row no-pad">
-            <div class="col-sm-12 custom-col">
-              <p class="content">
-                Welcome to FableForge, the ultimate creative hub for fantasy writers and RPG enthusiasts! Our mission is to provide you with an inspiring collection of tools, resources, and a supportive community to help you unleash your imagination and craft compelling stories, characters, and worlds. Whether you're a seasoned author or just starting your journey, FableForge is the perfect destination for bringing your ideas to life. Dive into our innovative generators, explore our extensive library of articles and tutorials, and join our vibrant community of like-minded creators. Together, we'll forge unforgettable tales and thrilling adventures!
-              </p>
-            </div>
-            </div>
-          </div>
-        </div>]
-    </header>
+            ]
+        </header>
     </div>
     <div class="section1 lighting-effect">
-      <div class="section-overlay">
-        <section class="generator-info">
-            <div class="featured-generators">
-                <div class="generator-wrapper">
-                  <div class="generator">
-                    <h3>Tropes Generator</h3>
-                    <p class="gen-tag">Discover unique and engaging story elements with our Tropes Generator. Add depth and intrigue to your tales by incorporating these exciting narrative devices.</p>
-                    <a class="enter-button cta" href="tropes-generator.html" class="btn">Try Tropes Generator</a>
-                  </div>
-                  <div class="generator">
-                    <h3 class="shine">Genre Mash-Up Generator</h3>
-                    <p class="gen-tag shine">Unleash your creativity by blending genres with our Genre Mash-Up Generator. Create innovative and original stories that break the mold and captivate your audience.</p>
-                    <a class="enter-button cta shine" href="genre-mashup-generator.html" class="btn">Try Genre Mash-Up Generator</a>
-                  </div>
-                  <div class="generator">
-                    <h3>Creature Generator</h3>
-                    <p class="gen-tag">Populate your fantastical worlds with unique creatures using our Creature Generator. Design characters that capture your readers' imaginations.</p>
-                    <a class="enter-button cta" href="creature-generator.html" class="btn">Try Creature Generator</a>
-                  </div>
+        <div class="section-overlay">
+            <section class="generator-info">
+                <div class="featured-generators">
+                    <div class="generator-wrapper">
+                        <div class="generator">
+                            <h3>Tropes Generator</h3>
+                            <p class="gen-tag">Discover unique and engaging story elements with our Tropes Generator. Add depth and intrigue to your tales by incorporating these exciting narrative devices.</p>
+                            <a class="enter-button cta" href="tropes-generator.html" class="btn">Try Tropes Generator</a>
+                        </div>
+                        <div class="generator">
+                            <h3 class="shine">Genre Mash-Up Generator</h3>
+                            <p class="gen-tag shine">Unleash your creativity by blending genres with our Genre Mash-Up Generator. Create innovative and original stories that break the mold and captivate your audience.</p>
+                            <a class="enter-button cta shine" href="genre-mashup-generator.html" class="btn">Try Genre Mash-Up Generator</a>
+                        </div>
+                        <div class="generator">
+                            <h3>Creature Generator</h3>
+                            <p class="gen-tag">Populate your fantastical worlds with unique creatures using our Creature Generator. Design characters that capture your readers' imaginations.</p>
+                            <a class="enter-button cta" href="creature-generator.html" class="btn">Try Creature Generator</a>
+                        </div>
+                    </div>
                 </div>
-              </div> 
-        </section>
-      </div>
+            </section>
+        </div>
     </div>
-  
-
     <section class="resources background-gradient">
         <h2 class="section-heading">Resources and Guides</h2>
         <p class="resources-blurb">Introducing the Resources and Guides section of FableForge, a curated collection of valuable tools, tips, and techniques designed to inspire and support the creative process of fantasy writers and RPG players. As we continue to expand our offerings, you'll find a growing repository of world-building guides, character development techniques, plot structuring methods, and more. Our goal is to provide a comprehensive library that helps you bring your stories and campaigns to life, whether you're a seasoned writer or a newcomer to the fantastic realms. So, dive in, explore the resources, and let the journey of imagination begin!</p>
-
+        <div class="container-fluid images">
+            <div class="row justify-content-center gap-3">
+                <div class="col-md-6 col-sm custom-col">
+                    <img class="fant img-fluid rounded-5" src="battle1 (1).png">
+                </div>
+                <div class="col-md-6 col-sm custom-col">
+                    <img class="fant img-fluid rounded-5" src="bg2.png">
+                </div>
+            </div>
+        </div>
         <ul>
-          <li><a href="character-creation-guide.html" class="guide-link">FableForge's Guide To Character Creation</a></li>
-          <li><a href= "top-tips-for-worldbuilding.html" class="guide-link">Top Tips For Worldbuilding</a></li>
-          <li><a href="create-a-plot-outline.html" class="guide-link">Creating A Plot Outline</a></li>
+            <li>
+                <a href="character-creation-guide.html" class="guide-link">FableForge's Guide To Character Creation</a>
+            </li>
+            <li>
+                <a href="top-tips-for-worldbuilding.html" class="guide-link">Top Tips For Worldbuilding</a>
+            </li>
+            <li>
+                <a href="create-a-plot-outline.html" class="guide-link">Creating A Plot Outline</a>
+            </li>
         </ul>
     </section>
-  </body>
+</body>
 </html>
