add content and styling to character creation guide page

--- a/resources/character-creation-guide.html
+++ b/resources/character-creation-guide.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand">
-            <div class="container-fluid custom-nav">
+            <div class="container-fluid custom-nav-guides">
                 <a class="navbar-brand custom-brand" href="#">FableForge</a>
                 <button
                     class="navbar-toggler"
@@ -47,82 +47,96 @@
                 </div>
             </div>
         </nav>
-        <main class="guide">
-            <h1>The Ultimate Character Creation Guide for Fantasy Writers and RPG Players</h1>
-            <h2>Introduction</h2>
-            <p>
-                Creating a compelling character is essential to immerse your readers or players in your story or game. In this guide, we'll take you through the steps of crafting a well-rounded, memorable character that feels alive and real. We'll cover everything from their background and personality to their goals and relationships with other characters.
-            </p>
-            <h2>Step 1: Conceptualizing Your Character</h2>
-            <p>
-                Start by brainstorming ideas for your character. What kind of character do you want to create? Consider the following aspects:
-            </p>
-            <ul>
-                <li>Role in the story or game (e.g., protagonist, antagonist, sidekick, mentor)</li>
-                <li>Race or species (e.g., human, elf, dwarf, alien)</li>
-                <li>Occupation or class (e.g., warrior, mage, thief, healer)</li>
-            </ul>
-            <h2>Step 2: Background and Origins</h2>
-            <p>
-                Once you have a basic concept, think about your character's background and origins. This will provide a foundation for their personality, motivations, and actions. Consider:
-            </p>
-            <ul>
-                <li>Place of birth and upbringing</li>
-                <li>Family and social status</li>
-                <li>Key events or experiences that shaped them</li>
-            </ul>
-            <h2>Step 3: Personality and Traits</h2>
-            <p>
-                Now, delve into your character's personality and traits. This will help you understand how they think, feel, and interact with the world. Consider:
-            </p>
-            <ul>
-                <li>Core values and beliefs</li>
-                <li>Strengths and weaknesses</li>
-                <li>Fears and desires</li>
-                <li>Likes and dislikes</li>
-            </ul>
-            <h2>Step 4: Physical Appearance</h2>
-            <p>
-                Describe your character's physical appearance. This will help your readers or players visualize them and make them more relatable. Consider:
-            </p>
-            <ul>
-                <li>Height, build, and posture</li>
-                <li>Hair, eye, and skin color</li>
-                <li>Clothing and accessories</li>
-                <li>Unique features or markings</li>
-            </ul>
-            <h2>Step 5: Goals and Motivations</h2>
-            <p>
-                Every character needs goals and motivations that drive their actions. This will help create a sense of purpose and direction in your story or game. Consider:
-            </p>
-            <ul>
-                <li>Short-term and long-term goals</li>
-                <li>Personal or external motivations</li>
-                <li>Conflicts or obstacles they must overcome</li>
-            </ul>
-            <h2>Step 6: Relationships and Connections</h2>
-            <p>
-                Your character's relationships with other characters are crucial to their development and the overall narrative. Think about how your character interacts with others and the connections they have. Consider:
-            </p>
-            <ul>
-                <li>Family members, friends, and allies</li>
-                <li>Enemies, rivals, and adversaries</li>
-                <li>Romantic interests or partners</li>
-                <li>Mentors, protégés, or followers</li>
-            </ul>
-            <h2>Step 7: Character Arc and Development</h2>
-            <p>
-                Finally, consider how your character will grow and change throughout the story or game. This will help you create a dynamic, engaging character that evolves with the narrative. Consider:
-            </p>
-            <ul>
-                <li>How their goals and motivations may shift</li>
-                <li>Lessons they learn or experiences that change them</li>
-                <li>How their relationships with other characters may evolve</li>
-            </ul>
-            <h2>Conclusion</h2>
-            <p>
-                With this guide, you're well on your way to creating a rich, multidimensional character that will captivate your readers or players. Remember, character creation is an iterative process, and it's okay to make changes as you go. Take your time, be open to exploration, and most importantly, have fun!
-            </p>
+        <main class="guide fableforge-guides">
+            <div class="guides-container">
+                <h1 class="section-title">The Ultimate Character Creation Guide for Fantasy Writers and RPG Players</h1>
+                <h2 class="section-heading">Introduction</h2>
+                <img src="../intro-character-creation.png" alt="Introduction Image" class="introduction-image img-fluid rounded-5">
+                <p class="resources-blurb">
+                    Crafting a compelling character is a cornerstone of storytelling, whether you're writing a novel, developing a role-playing game, or creating a screenplay. A well-rounded, memorable character has the power to captivate your audience and transport them into the world you've built. By taking the time to develop a character that feels alive and real, you can create a more engaging, immersive experience for your readers or players.
+
+                    In this guide, we'll walk you through the essential steps of character creation, from conceptualization to development. We'll explore the various components that make up a compelling character, including their background, personality, physical appearance, goals, and relationships with other characters. We'll also delve into the importance of character arcs, conflicts, and growth over time, all of which contribute to the depth and believability of your character.
+
+                    Whether you're a seasoned writer or a newcomer to storytelling, this guide aims to equip you with the tools and insights necessary to bring your characters to life. By following the advice and exercises outlined here, you can create characters that resonate with your audience and leave a lasting impression.
+
+                    Remember, character creation is a journey full of exploration, trial and error, and creative discovery. Embrace the process, learn from your experiences, and most importantly, enjoy the adventure of crafting unforgettable characters that will captivate your readers or players.
+                </p>
+                <h2 class="section-heading">Why Character Development Matters</h2>
+                <p class="resources-blurb">
+                    Character development is crucial to storytelling because it brings your narrative to life and helps your audience connect with your characters on a deeper level. By investing time and effort into developing rich, multidimensional characters, you can create a more immersive and enjoyable experience for your readers or players. Here are some reasons why character development matters:</p>
+
+                    <ul>
+                    <li><strong>Emotional investment:</strong> Well-developed characters evoke emotions in your audience, whether it's sympathy, love, hatred, or admiration. This emotional investment keeps your audience engaged and invested in the story, rooting for or against your characters.</li>
+                    <li><strong>Relatability:</strong> Characters with depth and complexity are more relatable, allowing your audience to see themselves in their struggles, desires, and triumphs. This connection helps your readers or players become more immersed in the story and care about the outcomes.</li>
+                    <li><strong>Realism:</strong> Fleshed-out characters with distinct personalities, backgrounds, and motivations make your fictional world feel more realistic and believable. The more your characters resemble real people, the easier it is for your audience to suspend their disbelief and become lost in your story or game.</li>
+                    <li><strong>Dynamic storytelling:</strong> Characters that grow and change over time create dynamic, engaging narratives. Character development adds depth to your story, as characters face challenges, overcome obstacles, and evolve in response to their experiences.</li>
+                    <li><strong>Conflict and tension:</strong> Well-developed characters often have conflicting goals, desires, or beliefs, which can generate tension and conflict within your narrative. This conflict drives the story forward and keeps your audience eager to know what happens next.</li>
+                    <li><strong>Memorability:</strong> Memorable characters leave a lasting impression on your audience, making your story or game more enjoyable and impactful. By creating unique, fully-realized characters, you can craft an unforgettable narrative that resonates with your readers or players long after they've finished.</li>
+                    </ul>
+                <p class="resources-blurb">By understanding the importance of character development and putting it into practice, you can create more engaging, meaningful stories or games that captivate your audience and stand the test of time.</p>
+
+                <h2 class="section-heading">Step 2: Background and Origins</h2>
+                <p class="resources-blurb">
+                    Once you have a basic concept, think about your character's background and origins. This will provide a foundation for their personality, motivations, and actions. Consider:
+                </p>
+                <ul>
+                    <li>Place of birth and upbringing</li>
+                    <li>Family and social status</li>
+                    <li>Key events or experiences that shaped them</li>
+                </ul>
+                <h2 class="section-heading">Step 3: Personality and Traits</h2>
+                <p class="resources-blurb">
+                    Now, delve into your character's personality and traits. This will help you understand how they think, feel, and interact with the world. Consider:
+                </p>
+                <ul>
+                    <li>Core values and beliefs</li>
+                    <li>Strengths and weaknesses</li>
+                    <li>Fears and desires</li>
+                    <li>Likes and dislikes</li>
+                </ul>
+                <h2 class="section-heading">Step 4: Physical Appearance</h2>
+                <p class="resources-blurb">
+                    Describe your character's physical appearance. This will help your readers or players visualize them and make them more relatable. Consider:
+                </p>
+                <ul>
+                    <li>Height, build, and posture</li>
+                    <li>Hair, eye, and skin color</li>
+                    <li>Clothing and accessories</li>
+                    <li>Unique features or markings</li>
+                </ul>
+                <h2 class="section-heading">Step 5: Goals and Motivations</h2>
+                <p class="resources-blurb">
+                    Every character needs goals and motivations that drive their actions. This will help create a sense of purpose and direction in your story or game. Consider:
+                </p>
+                <ul>
+                    <li>Short-term and long-term goals</li>
+                    <li>Personal or external motivations</li>
+                    <li>Conflicts or obstacles they must overcome</li>
+                </ul>
+                <h2 class="section-heading">Step 6: Relationships and Connections</h2>
+                <p class="resources-blurb">
+                    Your character's relationships with other characters are crucial to their development and the overall narrative. Think about how your character interacts with others and the connections they have. Consider:
+                </p>
+                <ul>
+                    <li>Family members, friends, and allies</li>
+                    <li>Enemies, rivals, and adversaries</li>
+                    <li>Romantic interests or partners</li>
+                    <li>Mentors, protégés, or followers</li>
+                </ul>
+                <h2 class="section-heading">Step 7: Character Arc and Development</h2>
+                <p class="resources-blurb">
+                    Finally, consider how your character will grow and change throughout the story or game. This will help you create a dynamic, engaging character that evolves with the narrative. Consider:
+                </p>
+                <ul>
+                    <li>How their goals and motivations may shift</li>
+                    <li>Lessons they learn or experiences that change them</li>
+                    <li>How their relationships with other characters may evolve</li>
+                </ul>
+                <h2 class="section-heading">Conclusion</h2>
+                <p class="resources-blurb">
+                    With this guide, you're well on your way to creating a rich, multidimensional character that will captivate your readers or players. Remember, character creation is an iterative process, and it's okay to make changes as you go. Take your time, be open to exploration, and most importantly, have fun!
+                </p>
+            </div>
         </main>
     </body>
 </html>
